--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -22,6 +22,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	color : black;
+	text-decoration: none;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
@@ -122,7 +124,7 @@ nav li {
 	font-size: 1.2em;
 }
 
-li:hover {
+li:hover , a:hover {
 	color: #B1663C;
 }
 #introduction {
