--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -11,3 +11,48 @@ body {
     font-family: 'Work Sans';
     font-size: 14px;
 }
+
+/* Header */
+header {
+    margin-top: 50px;
+    display: flex;
+	justify-content: space-between;
+}
+
+h1 {
+    display: flex;
+	flex-direction: column;
+	font-family: 'Syne';
+	font-size: 22px;
+	font-weight: 800;
+	color: #B1663C
+}
+
+h1 > span {
+	font-size:10px;
+	letter-spacing: 0.1em;
+;
+}
+
+nav ul {
+	display: flex;
+	align-items: center;
+	list-style-type: none;
+
+}
+nav li {
+    padding: 0 10px;
+    font-size: 14px;
+    font-family : 'Work sans';
+}
+
+li:hover , a:hover {
+	color: #B1663C;
+}
+
+a {
+    color : black;
+    text-decoration: none;
+    font-family : 'Work sans';
+    font-weight: 600;
+}
