--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -56,3 +56,65 @@ a {
     font-family : 'Work sans';
     font-weight: 600;
 }
+
+
+/*Formulaire de connexion*/
+main {
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top : 150px;
+    margin-bottom : 350px;
+}
+
+h2{
+	font-family: 'Syne';
+	font-weight: 700;
+	font-size: 30px;
+	color: #1D6154;
+    margin-bottom : 37px;
+}
+
+form {
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+label {
+    color : #3D3D3D;
+    font-size : 14px;
+    font-weight : 500;
+    margin-bottom : 7px;
+}
+
+input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom : 30px;
+    height : 51px;
+    width : 380px;
+    border : none;
+     box-shadow: 0 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+button {
+    background-color: #1D6154;
+    color : white;
+    height : 36px;
+    width : 179px;
+    border : none;
+    border-radius : 60px;
+    font-weight: 700;
+    cursor : pointer;
+}
+
+button:hover {
+    background-color : #0E2F28;
+}
+
+.password_forgot {
+    margin-top : 28px;
+    text-decoration: underline;
+    color : #3D3D3D;
+}
