--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -75,17 +75,40 @@ table {
 	color : White;
 }
 
+/*Bandeau Administrateur*/
+.adminBand {
+	height : 59px;
+	width: 100%;
+	margin : 0px;
+	justify-content: center;
+	align-items: center;
+	background-color: black;
+}
+
+.adminBand__icon {
+	margin-right : 11px;
+}
+
+.adminBand__text {
+	color : white;
+}
+
 /** end reset css**/
 body {
-	max-width: 1140px;
-	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
 }
+
+header, main , footer {
+	max-width: 1140px;
+	margin:auto;
+}
+
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
 section {
 	margin: 50px 0
@@ -122,6 +145,7 @@ nav ul {
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+	cursor : pointer;
 }
 
 li:hover , a:hover {
@@ -130,6 +154,7 @@ li:hover , a:hover {
 #introduction {
 	display: flex;
 	align-items: center;
+	margin-bottom : 140px;
 }
 #introduction figure {
 	flex: 1
@@ -152,7 +177,6 @@ li:hover , a:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
 }
 .gallery {
 	width: 100%;
@@ -212,6 +236,7 @@ input[type="submit"]{
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin-top: 2em;
+	margin-bottom : 2em;
 }
 
