Ajout d'un cursor Pointer sur le bouton d'ajout d'une image

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -473,6 +473,7 @@ input:focus {
 	background-color: #CBD6DC;
 	color : #306685;
 	margin-bottom : 7px;
+	cursor : pointer;
 }
 
 .modale__addWorks__form__addImage--subtitles {
